Remove error of links

--- a/lifeAtNitj/CampusAmenities.html
+++ b/lifeAtNitj/CampusAmenities.html
@@ -26,7 +26,7 @@
 <body class="font-body text-dark-purple">
 
     <!-- Header -->
-    <script src=".//common template/header.js"></script>
+    <script src="./common template/header.js"></script>
     <!-- === Search bar ends === -->
 
 
