--- a/admin/administration.html
+++ b/admin/administration.html
@@ -90,7 +90,7 @@
 </head>
 
 <body>
-    <script src="../common template/header.js"></script>
+    <script src="./common template/header.js"></script>
 
     <div class="flex flex-col gap-8 lg:gap-12 pt-[112px] md:pt-[144px] lg:pt-[144px] mb-24">
         <div>
