--- a/admin/chairperson.html
+++ b/admin/chairperson.html
@@ -85,7 +85,7 @@
 </head>
 
 <body>
-    <script src="../common template/header.js"></script>
+    <script src="./common template/header.js"></script>
 
     <div class="main-body flex flex-col gap-8 lg:gap-12 pt-[112px] md:pt-[144px] lg:pt-[144px] mb-24">
         <div>
